feat: add artices route
